# armatak

./: .env.example  .gitattributes  .gitignore  A3_PLAYER_GUIDE.md  Cargo.toml  README.md  build.gradle.kts  logo_ca.paa  logo_hover_ca.paa  logo_small_ca.paa  mod.cpp  picture.paa  settings.gradle.kts  simtak.apk
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pack_early.yaml  pack_monorepo.yaml  publish.yaml  publish_early.yaml  release_drafter.yaml  release_publisher.yaml
.hemtt/: project.toml
addons/client/: $PBOPREFIX$  CfgEventHandlers.hpp  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  dialog.hpp  initPlayerLocal.sqf  script_component.hpp
addons/items/: $PBOPREFIX$  CfgVehicles.hpp  config.cpp
addons/main/: $PBOPREFIX$  Cfg3den.hpp  CfgCommands.hpp  CfgFunctions.hpp  CfgVehicles.hpp  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  dialog.hpp  initPlayerLocal.sqf  script_component.hpp  script_mod.hpp  script_version.hpp
addons/server/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgVehicles.hpp  Cfgvehicles.hpp  XEH_PREP.hpp  config.cpp  dialog.hpp  script_component.hpp
addons/video/: $PBOPREFIX$  CfgVehicles.hpp  XEH_PREP.hpp  config.cpp  script_component.hpp
app/: build.gradle.kts
extensions/armatak/: .env.example  Dockerfile  controller.go  data.go  go.mod  go.sum  main.go  service.go  structs.go  util.go
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hearts_and_minds.kunduz_valley/: define_mod.sqf  description.ext  mission.sqm  stringtable.xml
hearts_and_minds.kunduz_valley/core/: init_player.sqf  init_server.sqf
src/: commands.rs  cot_generator.rs  cot_router.rs  fts_api.rs  lib.rs  ots_api.rs  structs.rs  tests.rs  udp_client.rs  udp_socket.rs  util.rs  video_stream.rs  websocket.rs
src/cot/: cot.rs  digital_pointer.rs  eud.rs  gps.rs  message.rs  mod.rs  nato.rs
src/tcp/: cot.rs  draw.rs  mod.rs
src/utils/: address.rs  log.rs  mod.rs  (+1 more)
(+170 files in other folders)
