[package]
name = "armatak"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = "1.10.4"
log = "0.4.22"
log4rs = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = {version = "0.12.7", features = ["blocking"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40", features = ["full"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
name = "armatak"
crate-type = ["cdylib"]
