[package]
name = "armatak"
version = "1.0.1"
edition = "2021"

[dependencies]
arma-rs = "1.10.4"
chrono = "0.4.39"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[lib]
name = "armatak"
crate-type = ["cdylib"]
